--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,8 @@
     "start:local": "sam local start-api"
   },
   "dependencies": {
-    "aws-sdk": "^2.1499.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "@aws-sdk/client-dynamodb": "^3.540.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.126",
