--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.540.0",
+    "@aws-sdk/util-dynamodb": "^3.812.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
