--- a/backend/src/functions/users/package.json
+++ b/backend/src/functions/users/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "projects-lambda",
+  "name": "users-lambda",
   "version": "1.0.0",
-  "description": "Lambda function for project management",
+  "description": "Lambda function for user management",
   "main": "index.js",
   "scripts": {
     "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.0.0",
     "@aws-sdk/lib-dynamodb": "^3.0.0",
@@ -18,4 +14,4 @@
   "devDependencies": {
     "jest": "^29.0.0"
   }
-}
+} 
