--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.817.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mdxeditor/editor": "^3.32.3",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "@types/react-beautiful-dnd": "^13.1.8",
     "amazon-cognito-identity-js": "^6.3.15",
     "aws-amplify": "^6.14.4",
